--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section>
             <h2>Jetzt einladen</h2>
             <p>
-                Möchtest du ManagerX auf deinem Server nutzen? Dann <a href="invite.html">lade den Bot jetzt ein</a> – kostenlos und einfach.
+                Möchtest du ManagerX auf deinem Server nutzen? Dann <a href="https://discord.com/oauth2/authorize?client_id=1368201272624287754&permissions=8&integration_type=0&scope=bot">Lade den Bo jetzt ein</a> – kostenlos und einfach.
             </p>
         </section>
     </main>
