--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Datenschutzerklärung - ManagerX Discord-Bot</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="../css/index.css" />
     <style>
         /* Zusätzliche Styles für die Tabelle */
         table {
@@ -211,6 +211,11 @@
                     <tr>
                         <td>Nachrichtenanzahl, Voicetime (Stats)</td>
                         <td>Statistik zur Nutzeraktivität</td>
+                        <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
+                    </tr>
+                    <tr>
+                        <td>User-ID, Server-ID, Nachrichteninhalt (Globalchat)</td>
+                        <td>Übertragung und Anzeige von Chatnachrichten zwischen Servern (Globalchat) </td>
                         <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
                     </tr>
                 </tbody>
