--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <header class="header">
         <h1>ManagerX</h1>
-        <img src="https://img.shields.io/badge/Version-V1.2-blue?style=for-the-badge" alt="Aktuelle Version" />
-        <img src="https://img.shields.io/badge/Next%20Version-V1.3-green?style=for-the-badge" alt="Nächste Version" />
+        <div class="badges">
+          <img src="https://img.shields.io/badge/Version-V1.2-blue?style=for-the-badge" alt="Aktuelle Version" />
+          <img src="https://img.shields.io/badge/Next%20Version-V1.3-green?style=for-the-badge" alt="Nächste Version" />
+        </div>
         <nav class="navbar">
             <ul>
                 <li><a href="index.html" aria-current="page">Startseite</a></li>
