--- a/privacy.html
+++ b/privacy.html
@@ -214,8 +214,18 @@
                         <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
                     </tr>
                     <tr>
-                        <td>User-ID, Server-ID, Nachrichteninhalt (Globalchat)</td>
-                        <td>Übertragung und Anzeige von Chatnachrichten zwischen Servern (Globalchat) </td>
+                        <td>User-ID, Server-ID, XP, Level, Nachrichtenanzahl, Rollen-ID (Levelsystem)</td>
+                        <td>Verwaltung von Nutzer-Leveln, Erfahrung und zugehörigen Rollen</td>
+                        <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
+                    </tr>
+                    <tr>
+                        <td>Guild-ID, Kanal-ID, User-ID, Nachrichteninhalt, Attachment-URLs, Zeitstempel (Globalchat)</td>
+                        <td>Übertragung und Anzeige von Chatnachrichten zwischen Servern (Globalchat)</td>
+                        <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
+                    </tr>
+                    <tr>
+                        <td>ID, Ban-Grund, Ban-Zeit, Bann-Status (Blacklist-Admin-System)</td>
+                        <td>Verwaltung von administrativen Blacklists für Benutzer</td>
                         <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
                     </tr>
                 </tbody>
