--- a/privacy.html
+++ b/privacy.html
@@ -224,7 +224,7 @@
                         <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
                     </tr>
                     <tr>
-                        <td>ID, Ban-Grund, Ban-Zeit, Bann-Status (Blacklist-Admin-System)</td>
+                        <td>ID, Ban-Grund, Ban-Zeit, Bann-Status (Blacklist-Admin-System Globalchat)</td>
                         <td>Verwaltung von administrativen Blacklists für Benutzer</td>
                         <td>Art. 6 Abs. 1 lit. f (Berechtigtes Interesse)</td>
                     </tr>
