--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         benutzerfreundlicher Bedienung.
                     </p>
                     <div class="hero-buttons">
-                        <a href="#" class="btn btn-primary">
+                        <a href="https://discord.com/oauth2/authorize?client_id=1368201272624287754&permissions=1669118160151&integration_type=0&scope=bot" class="btn btn-primary">
                             <i class="fab fa-discord"></i>
                             Zu Discord hinzufügen
                         </a>
@@ -262,4 +262,5 @@
         });
     </script>
 </body>
+
 </html>
