--- a/impressum.html
+++ b/impressum.html
@@ -77,9 +77,9 @@
                                 </div>
                                 <div class="info-details">
                                     <p><strong>OPPRO.NET Development</strong></p>
-                                    <p>Geschäftsführer: Ausgeblendet</p>
-                                    <p>Ausgeblendet</p>
-                                    <p>Ausgeblendet</p>
+                                    <p>Geschäftsführer: Lenny Steiger</p>
+                                    <p>Eulauer Str. 24</p>
+                                    <p>04523 Pegau</p>
                                     <p>Deutschland</p>
                                 </div>
                             </div>
@@ -643,4 +643,5 @@
         }
     </style>
 </body>
+
 </html>
