--- a/privacy.html
+++ b/privacy.html
@@ -198,6 +198,17 @@
                                         <td>Verwaltung von administrativen Blacklists für Benutzer</td>
                                         <td><span class="legal-basis">Art. 6 Abs. 1 lit. f DSGVO</span></td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="data-type">
+                                                <i class="fas fa-hand-wave"></i>
+                                                <span>Guild-ID, Kanal-ID, Welcome Message, Embed-Einstellungen</span>
+                                                <small>(Welcome System)</small>
+                                            </div>
+                                        </td>
+                                        <td>Automatische Begrüßung neuer Mitglieder mit personalisierten Nachrichten und Verwaltung der Welcome-Konfiguration</td>
+                                        <td><span class="legal-basis">Art. 6 Abs. 1 lit. f DSGVO</span></td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
