--- a/impressum.html
+++ b/impressum.html
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="info-details">
                                     <p><strong>OPPRO.NET Development</strong></p>
-                                    <p>Geschäftsführer: Lenny Steiger</p>
+                                    <p>Lenny Steiger</p>
                                     <p>Eulauer Str. 24</p>
                                     <p>04523 Pegau</p>
                                     <p>Deutschland</p>
@@ -645,3 +645,4 @@
 </body>
 
 </html>
+
