--- a/impressum.html
+++ b/impressum.html
@@ -55,8 +55,8 @@
                 <!-- Introduction -->
                 <div class="intro-section">
                     <div class="intro-card">
-                        <h2>Impressum nach § 5 TMG</h2>
-                        <p>Angaben gemäß § 5 TMG (Telemediengesetz) für den Discord-Bot ManagerX 
+                        <h2>Impressum</h2>
+                        <p>Angaben gemäß für den Discord-Bot ManagerX 
                         und die zugehörige Website. Diese Seite enthält alle rechtlich erforderlichen 
                         Informationen über den Anbieter.</p>
                     </div>
@@ -645,4 +645,5 @@
 </body>
 
 </html>
+
 
